--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,8 @@
 LineLength:
   Max: 150
- Excludes:
-    - test/**
+AllCops:
+  Exclude:
     - vendor/**
-    - ruby/**
+    - foodcritic/**
+SingleSpaceBeforeFirstArg:
+  Enabled: false
